--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "fs-project-46",
-  "homepage": "https://github.com/HKreoin/fullstack-javascript-project-46#readme",
-  "bugs": {
-    "url": "https://github.com/HKreoin/fullstack-javascript-project-46/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HKreoin/fullstack-javascript-project-46.git"
-  },
-  "license": "ISC",
-  "author": "hkreoin",
-  "type": "commonjs",
-  "main": "src/index.js",
-  "bin": {
-    "gendiff": "bin/gendiff.js"
-  },
+  "type": "module",
+  "description": "Compares two configuration files and shows a difference",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "commander": "^13.1.0"
   }
