--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,3 +25,8 @@ jobs:
       - run: npm run lint
       - run: npm run build --if-present
       - run: npm test
+      - run: npm run test:coverage
+      - uses: qltysh/qlty-action/coverage@main
+        with:
+          coverage-token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
+          files: coverage/lcov.info
